[gd_scene load_steps=4 format=3 uid="uid://yrak2xh56uyc"]

[ext_resource type="Script" path="res://scenes/enemies/big_slime.gd" id="1_0cv0d"]
[ext_resource type="Texture2D" uid="uid://7gh6nbu45m7d" path="res://graphics/enemies/BigSlime.png" id="1_wj3gd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6xsw"]
radius = 10.0

[node name="BigSlime" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(5, 5)
script = ExtResource("1_0cv0d")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_wj3gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_t6xsw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_t6xsw")

[node name="Timer" type="Timer" parent="."]

[node name="smalSlimeSpawnLocation" type="Marker2D" parent="."]
position = Vector2(10, 0)

[node name="smalSlimeSpawnLocation2" type="Marker2D" parent="."]
position = Vector2(-10, 0)

[node name="smalSlimeSpawnLocation3" type="Marker2D" parent="."]
position = Vector2(0, 10)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
